fiz link quem sou eu

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
   
         <ul class="nav navbar-nav navbar-right">
           <li><a class="active" href="{{site.baseurl}}/">Página inicial</a></li>
-          <li><a href="#quem-sou-eu">Quem sou eu</a></li>
+          <li><a href="{{site.baseurl}}/#quem-sou-eu">Quem sou eu</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
   
